--- a/shared/locales/src/digit/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/digit/machine-GoogleGemini-fr.json
@@ -1035,6 +1035,10 @@
     "original": "Upload hier het logo zonder extra tekst of witruimtes. Laat leeg als je die niet hebt, en upload dan een banner. Zo kan Ravot de plaatsing optimaliseren. We plaatsen het logo bij voorkeur op de afgedrukte versie van een ticket als zowel een logo als banner aanwezig is.",
     "translation": "Téléchargez ici le logo sans texte ni espaces blancs supplémentaires. Laissez vide si vous n'en avez pas et téléchargez ensuite une bannière. Ravot peut ainsi optimiser le placement. Nous plaçons le logo de préférence sur la version imprimée d'un billet si un logo et une bannière sont présents."
   },
+  "dfd3083c-6483-46de-9cc8-0afeb7f021f3": {
+    "original": "Open Ravot",
+    "translation": "Ouverture Ravot"
+  },
   "e07bc7a1-92c0-48fc-91f3-46e12573ee03": {
     "original": "Naam groep",
     "translation": "Nom du groupe"
