--- a/shared/locales/src/jamboree/machine-GoogleGemini-en.json
+++ b/shared/locales/src/jamboree/machine-GoogleGemini-en.json
@@ -1099,6 +1099,10 @@
     "original": "Upload hier het logo zonder extra tekst of witruimtes. Laat leeg als je die niet hebt, en upload dan een banner. Zo kan Jamboree de plaatsing optimaliseren. We plaatsen het logo bij voorkeur op de afgedrukte versie van een ticket als zowel een logo als banner aanwezig is.",
     "translation": "Upload the logo here without extra text or white spaces. Leave blank if you don't have one, and then upload a banner. This allows Jamboree to optimise placement. We prefer to place the logo on the printed version of a ticket if both a logo and banner are present."
   },
+  "dfd3083c-6483-46de-9cc8-0afeb7f021f3": {
+    "original": "Open Jamboree",
+    "translation": "Open Jamboree"
+  },
   "dff05b27-5ad9-416c-b344-f890a4e68255": {
     "original": "Scoutsjaar",
     "translation": "Scout year"
