--- a/shared/locales/src/jamboree/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/jamboree/machine-GoogleGemini-fr.json
@@ -1111,6 +1111,10 @@
     "original": "Upload hier het logo zonder extra tekst of witruimtes. Laat leeg als je die niet hebt, en upload dan een banner. Zo kan Jamboree de plaatsing optimaliseren. We plaatsen het logo bij voorkeur op de afgedrukte versie van een ticket als zowel een logo als banner aanwezig is.",
     "translation": "Téléchargez ici le logo sans texte ni espaces blancs supplémentaires. Laissez vide si vous n'en avez pas et téléchargez ensuite une bannière. Jamboree peut ainsi optimiser le placement. Nous plaçons le logo de préférence sur la version imprimée d'un ticket si un logo et une bannière sont présents."
   },
+  "dfd3083c-6483-46de-9cc8-0afeb7f021f3": {
+    "original": "Open Jamboree",
+    "translation": "Jamboree Ouverte"
+  },
   "dff05b27-5ad9-416c-b344-f890a4e68255": {
     "original": "Scoutsjaar",
     "translation": "Année scoute"
