--- a/shared/locales/src/keeo/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/keeo/machine-GoogleGemini-fr.json
@@ -1107,6 +1107,10 @@
     "original": "Upload hier het logo zonder extra tekst of witruimtes. Laat leeg als je die niet hebt, en upload dan een banner. Zo kan Keeo de plaatsing optimaliseren. We plaatsen het logo bij voorkeur op de afgedrukte versie van een ticket als zowel een logo als banner aanwezig is.",
     "translation": "Téléchargez ici le logo sans texte ni espace blanc supplémentaire. Laissez vide si vous n'en avez pas et téléchargez ensuite une bannière. Ainsi, Keeo peut optimiser le placement. Nous plaçons le logo de préférence sur la version imprimée d'un ticket si un logo et une bannière sont présents."
   },
+  "dfd3083c-6483-46de-9cc8-0afeb7f021f3": {
+    "original": "Open Keeo",
+    "translation": "Ouvrir Keeo"
+  },
   "dff05b27-5ad9-416c-b344-f890a4e68255": {
     "original": "Scoutsjaar",
     "translation": "Année scoute"
